<resources>
    <string name="app_name">FoodExpress</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="my_resturant_app">My Resturant App</string>
    <string name="my_restaurant_app">My Restaurant App</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food.</string>
    <string name="sign_in">Sign in</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_registered">Already Registered ?</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My Cart</string>
    <string name="hazerakteritu_gmail_com">hazerakteritu@gmail.com</string>
    <string name="hazera_ritu">Hazera Ritu</string>
    <string name="log_out">Log Out</string>
    <string name="address">Address</string>
    <string name="edit_your_location">Edit Your Location</string>
    <string name="don_t_have_an_account">Don\'t Have An Account ?</string>
    <string name="tasty_treat">Tasty Treat</string>
    <string name="_4_5">⭐ 4.5</string>
    <string name="modina_market_sylhet">Modina Market, Sylhet</string>
    <string name="grab_click_and_yumm">Grab, Click and Yumm</string>
    <string name="view_profile">View Profile</string>
    <!-- Accessibility strings -->
    <string name="map_description">Interactive map showing your location and nearby restaurants</string>
    <string name="current_location_button">Center map on current location</string>
    <string name="address_card_description">Current address information</string>
    <string name="restaurant_marker">Restaurant location</string>
    <string name="current_location_marker">Your current location</string>
</resources>