<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_view_profile"
            android:icon="@drawable/man"
            android:title="@string/view_profile" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/baseline_favorite_24"
            android:title="@string/favourite" />
        <item
            android:id="@+id/nav_my_cart"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/my_cart" />

        <item
            android:id="@+id/nav_address"
            android:icon="@drawable/baseline_location_on_24"
            android:title="@string/address" />

    </group>
</menu>