<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:foreground="@drawable/foreground_design"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/tara_evans"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/my_restaurant_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"

        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/baseline_account_circle_24"
        android:drawablePadding="13dp"
        android:hint="@string/enter_your_name"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:backgroundTint="#CCCCCC"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="13dp"
        android:hint="@string/email_address"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintWidth_percent=".8" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:backgroundTint="#CCCCCC"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/baseline_key_24"
        android:drawablePadding="13dp"
        android:hint="@string/password"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintWidth_percent=".8" />

    <!-- ConstraintLayout-এ যখন width বা height এর জন্য percentage ব্যবহার করি, তখন 0dp দিতে হয়। তারপর layout_constraintWidth_percent দিয়ে সাইজ নির্ধারণ করি। -->
    <!-- android:padding="14dp"  View-এর ভিতরের সব দিকে (top, bottom, left, right) ১৪dp করে ফাঁকা জায়গা থাকবে, -->
    <!-- android:layout_marginTop="10dp"  View-এর উপরে ১০dp ফাঁকা জায়গা তৈরি করে, যেন ওপরে থাকা অন্য ভিউর সঙ্গে গায়ে গায়ে না লাগে।-->
    <Button
        android:onClick="mainActivity"
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background= "@drawable/btn_bg_design"
        android:padding="14dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0.5"
        />

    <!-- app:layout_constraintVertical_bias="0.5" এটা বোঝায় যে View টি উপর ও নিচের মধ্যে ঠিক মাঝখানে থাকবে।
             মান ০ হলে উপরে, ১ হলে নিচে।  .5 মানে: vertically exact center. -->

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_registered"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias=".4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0.05" />



</androidx.constraintlayout.widget.ConstraintLayout>