<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Restaurant Image -->
        <ImageView
            android:id="@+id/restaurantImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tastytrtimg" />

        <!-- Restaurant Details -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <!-- Name & Rating Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:weightSum="10">

                <!-- Restaurant Name (Left Side) -->
                <TextView
                    android:id="@+id/restaurantName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tasty_treat"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:layout_weight="7" />

                <!-- Restaurant Rating (Right Side) -->
                <TextView
                    android:id="@+id/restaurantRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_4_5"
                    android:textSize="14sp"
                    android:textColor="@android:color/holo_orange_dark"
                    android:gravity="end"
                    android:layout_weight="3" />

            </LinearLayout>

            <!-- Restaurant Address (Below Name) -->
            <TextView
                android:id="@+id/restaurantAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modina_market_sylhet"
                android:textSize="14sp"
                android:textColor="@color/darkGray"
                android:paddingTop="3dp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
