<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/tara_evans"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-16dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lobster"
        android:text="@string/my_restaurant_app"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/sign_in"
        android:fontFamily="@font/lobster"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <!-- Email Input -->
    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:backgroundTint="#CCCCCC"
        android:drawableStart="@drawable/baseline_email_24"
        android:drawablePadding="13dp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#CCCCCC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintWidth_percent=".8"
        android:layout_marginTop="30dp"/>

    <!-- Password Input Container -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_container"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintWidth_percent=".8">

        <EditText
            android:id="@+id/editText3"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:backgroundTint="#CCCCCC"
            android:drawableStart="@drawable/baseline_key_24"
            android:drawablePadding="13dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#CCCCCC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/password_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Password Toggle Button -->
        <ImageView
            android:id="@+id/password_toggle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_eye_off"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Toggle password visibility"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="#CCCCCC" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Forgot Password Link -->
    <TextView
        android:id="@+id/forgot_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Forgot Password?"
        android:textColor="@color/teal_200"
        android:textSize="16sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/password_container"
        app:layout_constraintTop_toBottomOf="@+id/password_container" />

    <Button
        android:onClick="login"
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_design"
        android:padding="14dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_text"
        app:layout_constraintWidth_percent=".8"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="#FBFBFB"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias=".4"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="register"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintHorizontal_bias="0"/>

</androidx.constraintlayout.widget.ConstraintLayout>
